[package]
name = "cp-base"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
