[package]
name = "cp-base"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Pilot module"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
cp-render = { path = "../cp-render" }
cp-mod-utilities.workspace = true
log = "0.4"
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
unicode-width = "0.2"

[lints]
workspace = true
